fixed gallery on small resolution

--- a/src/styles/_photos.scss
+++ b/src/styles/_photos.scss
@@ -19,6 +19,16 @@
     .photos__img:last-child {
       width: calc(33% - #{$gap / 2});
     }
+  
+    @media screen and (max-width: 680px) {
+      .photos__img:first-child {
+        width: calc(50% - #{$gap / 2});
+      }
+  
+      .photos__img:last-child {
+        width: calc(50% - #{$gap / 2});
+      }
+    }
   }
 
   &--wide_right {
@@ -28,6 +38,16 @@
 
     .photos__img:last-child {
       width: calc(67% - #{$gap / 2});
+    }
+
+    @media screen and (max-width: 680px) {
+      .photos__img:first-child {
+        width: calc(50% - #{$gap / 2});
+      }
+  
+      .photos__img:last-child {
+        width: calc(50% - #{$gap / 2});
+      }
     }
   }
 }
